# filenumutils

./: .gitignore  README.md  pyproject.toml  setup.py
filenumutils/: __init__.py  filenum_functions.py  helper_functions.py
filenumutils/tests/: filenum_functions_test.py
